@@ -41,27 +41,26 @@ public final class DocIdSetBuilder {
    *
    * @see DocIdSetBuilder#grow
    */
-  public abstract static class BulkAdder {
-    public abstract void add(int doc);
+  public sealed interface BulkAdder permits FixedBitSetAdder, BufferAdder {
+    void add(int doc);
 
-    public void add(DocIdSetIterator iterator) throws IOException {
-      int docID;
-      while ((docID = iterator.nextDoc()) != DocIdSetIterator.NO_MORE_DOCS) {
-        add(docID);
-      }
-    }
+    void add(IntsRef docs);
+
+    void add(DocIdSetIterator iterator) throws IOException;
   }
 
-  private static class FixedBitSetAdder extends BulkAdder {
-    final FixedBitSet bitSet;
-
-    FixedBitSetAdder(FixedBitSet bitSet) {
-      this.bitSet = bitSet;
-    }
+  private record FixedBitSetAdder(FixedBitSet bitSet) implements BulkAdder {
 
     @Override
     public void add(int doc) {
       bitSet.set(doc);
+    }
+
+    @Override
+    public void add(IntsRef docs) {
+      for (int i = 0; i < docs.length; i++) {
+        bitSet.set(docs.ints[docs.offset + i]);
+      }
     }
 
     @Override
@@ -85,16 +84,25 @@ public final class DocIdSetBuilder {
     }
   }
 
-  private static class BufferAdder extends BulkAdder {
-    final Buffer buffer;
-
-    BufferAdder(Buffer buffer) {
-      this.buffer = buffer;
-    }
+  private record BufferAdder(Buffer buffer) implements BulkAdder {
 
     @Override
     public void add(int doc) {
       buffer.array[buffer.length++] = doc;
+    }
+
+    @Override
+    public void add(IntsRef docs) {
+      System.arraycopy(docs.ints, docs.offset, buffer.array, buffer.length, docs.length);
+      buffer.length += docs.length;
+    }
+
+    @Override
+    public void add(DocIdSetIterator iterator) throws IOException {
+      int docID;
+      while ((docID = iterator.nextDoc()) != DocIdSetIterator.NO_MORE_DOCS) {
+        add(docID);
+      }
     }
   }
 
